--- a/SvgHelper.Blazor.csproj
+++ b/SvgHelper.Blazor.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	  <Authors>musictopia</Authors>
 	  <Description>SVG Helpers For Blazor</Description>
-	  <Version>2.0.1</Version>
+	  <Version>3.0.1</Version>
   </PropertyGroup>
 
 
@@ -15,8 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommonBasicLibraries" Version="5.0.8" />
+    <PackageReference Include="CommonBasicLibraries" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.1" />
+    <PackageReference Include="SvgHelper.Generator" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
