--- a/SvgHelper.Blazor.csproj
+++ b/SvgHelper.Blazor.csproj
@@ -7,13 +7,19 @@
     <Authors>musictopia</Authors>
     <Description>SVG Helpers For Blazor</Description>
     <Version>9.0.1</Version>
+    <RunPostBuildAppCondition Condition="'$(Configuration)' == 'Release'">true</RunPostBuildAppCondition>
+    <FeedType>Public</FeedType>
   </PropertyGroup>
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CommonBasicLibraries" Version="9.0.1" />
+    <PackageReference Include="CommonBasicLibraries" Version="9.0.76" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
+    <PackageReference Include="Musictopia.AssemblyHelpersLibrary" Version="9.0.1" />
     <PackageReference Include="SvgHelper.Generator" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="C:\VS\OneNet\Apps\CommandLines\PostBuildPackageHandler\bin\Release\net9.0\PostBuildPackageHandler.exe $(ProjectName) $(ProjectDir) $(ProjectFileName) $(TargetDir)" Condition="'$(Configuration)' == 'Release' and '$(RunPostBuildAppCondition)' == 'true'" />
+  </Target>
 </Project>
